# KSY_TSP

./: .gitignore  RAEDME.md  README.md  pyproject.toml  requirements.txt  run_experiment.py
experiment_data/AI/: CHATGPT_IMAGE.json  CHATGPT_JSON.json  GEMINY_IMAGE.json
experiment_data/KSY_27_11_2024/: Experiment_20241127_140851.json  Experiment_20241127_151207.json  Experiment_20241127_153742.json  Experiment_20241127_154248.json  Experiment_20241127_155229.json  Experiment_20241127_155536.json  Experiment_20241127_161202.json  (+1 more)
result_processing/: AI_TEMPLATE  CHATGPT_IMAGE.json  CLUADE_IMAGE  CLUADE_IMAGE.json  GEMINY_IMAGE  merge_both.py  process_ai_experiment.py  process_experiment.py
tests_runs/: DEBUGExperiment_20241208_140633.json  DEBUGExperiment_20241208_140723.json  DEBUGExperiment_20241209_185123.json  DEBUGExperiment_20241209_185422.json  DEBUGExperiment_20241209_185700.json  DEBUGExperiment_20241209_185953.json  DEBUGExperiment_20241209_191516.json  DEBUGExperiment_20241209_193222.json  Experiment_20241120_233106.json  Experiment_20241120_234245.json  Experiment_20241121_123832.json  Experiment_20241121_124902.json  Experiment_20241121_125236.json  Experiment_20241121_125253.json  Experiment_20241127_135525.json  Experiment_20241127_142759.json  Experiment_20241127_144444.json  Experiment_20241127_153016.json  Experiment_20241202_153835.json  Experiment_20241205_155706.json  Experiment_20241205_231834.json  Experiment_20241206_194108.json
utils/: eval.py  eval_utils.py  experiment.py  gui.py  input.py  intro.py  test.py  tooltip.py
(+62 files in other folders)
